[BUGFIX]  Avoid typo3conf path when including backend CSS file. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/80
[BUGFIX]  Unset page parameter for filter options in 'list' type filter. https://github.com/tpwd/ke_search/issues/24
[BUGFIX]  Fix PHP 8 issue: Missing extConfPremium Configuration results in Error. https://github.com/tpwd/ke_search/issues/86
[TASK]    Use dependency injection in commands. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/72
[TASK]    Use "extension configuration" over "extension manager configuration". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/69
[TASK]    Streamline wording of "FlexForm". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/70/
[TASK]    Simplify determining of log level in ext_localconf.php. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/71
[TASK]    Add "ext-pdo" as requirement in composer.json. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/73
[TASK]    Add log message when inserting or updating records. https://github.com/tpwd/ke_search/issues/58
[TASK]    Unset page parameter in link viewhelper if it links to the first page. https://github.com/tpwd/ke_search/issues/22
[TASK]    Remove multiple option for filter selection flexform
[DOCS]    Improve chapter about search word length. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/68
[DOCS]    Add tip for adding more search metrics to Matomo. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/76

Version 4.3.1, February 2022
[BUGFIX]  Fix bug which made filtering unusable. https://github.com/tpwd/ke_search/issues/74

Version 4.3.0, February 2022
[!!!]     This version removes the dashboard requirement introduced in the last version and makes it optional again.