@@ -8,6 +8,7 @@ Upcoming version
 [BUGFIX]  Avoid typo3conf path when including backend CSS file. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/80
 [BUGFIX]  Unset page parameter for filter options in 'list' type filter. https://github.com/tpwd/ke_search/issues/24
 [BUGFIX]  Fix PHP 8 issue: Missing extConfPremium Configuration results in Error. https://github.com/tpwd/ke_search/issues/86
+[BUGFIX]  Empty search result results in many 'SELECT from tags ...'. Thanks to Stephan Bauer. https://github.com/tpwd/ke_search/pull/9
 [TASK]    Use dependency injection in commands. Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/72
 [TASK]    Use "extension configuration" over "extension manager configuration". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/69
 [TASK]    Streamline wording of "FlexForm". Thanks to Chris Müller. https://github.com/tpwd/ke_search/pull/70/
